force-app/main/default/objects/CustomOrder__c/CustomOrder__c.object-meta.xml
<CustomObject>
    <label>CustomOrder</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>