force-app/main/default/objects/CustomOrder__c/fields/OrderMade__c.field-meta.xml
<CustomField>
    <fullName>OrderMade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrderMade</label>
    <type>Checkbox</type>
</CustomField>