force-app/main/default/objects/CustomOrder__c/fields/OrderMadeTimestamp__c.field-meta.xml
<CustomField>
    <fullName>OrderMadeTimestamp__c</fullName>
    <description>Date and time when order is made</description>
    <label>OrderMadeTimestamp</label>
    <type>DateTime</type>
</CustomField>